--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Kevin</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Working on it...</p>
 							</div>
 						</div>
 						<nav>
